// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bins actual cycles by day: cycles binned by day and part 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "part": "parts-2",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "part6-4",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "partx-0",
  }: 1,
}
`;

exports[`bins actual cycles by day: cycles binned by day and station 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0001,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.00005,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0002,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005833333333333333,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.0001,
}
`;

exports[`loads a specific month for analysis: selected month with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "paltt": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:40:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:46:05.000Z,
          "y": 44,
        },
      ],
      "palss": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:52:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "partCCC-3": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "partBBB-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "partAAA-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
  },
  "inspection": Object {
    "by_part": Immutable.Map {},
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:46:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:52:05.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:34:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
  },
  "inspection": Object {
    "by_part": Immutable.Map {},
  },
  "latest_log_counter": 6,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [],
    "matsById": Immutable.Map {
      70329: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T09:52:05.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [],
      },
      58696: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqw",
        "last_event": 2018-02-08T09:34:05.000Z,
        "materialID": 58696,
        "partName": "part111",
        "signaledInspections": Array [],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "progv",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-08T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-08T09:24:05.000Z,
        "hours": 0.2,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-08T09:34:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:40:05.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:46:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:52:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
  },
  "inspection": Object {
    "by_part": Immutable.Map {},
  },
  "latest_log_counter": 6,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [],
    "matsById": Immutable.Map {
      29838: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          2,
        ],
        "jobUnique": "uniqc",
        "last_event": 2018-01-06T09:40:05.000Z,
        "materialID": 29838,
        "partName": "part222",
        "signaledInspections": Array [],
      },
      19656: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqz",
        "last_event": 2018-01-31T09:46:05.000Z,
        "materialID": 19656,
        "partName": "part222",
        "signaledInspections": Array [],
      },
      70329: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T09:52:05.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-01-31T09:43:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face5",
          "id": 19656,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqz",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-01-31T09:46:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face5",
          "id": 19656,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqz",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-01-31T09:46:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "proga",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-01-31T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-01-31T09:36:05.000Z,
        "hours": 0.4,
        "station": "MC #1",
      },
      Object {
        "date": 2018-01-31T09:46:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:46:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:52:05.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:34:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
  },
  "inspection": Object {
    "by_part": Immutable.Map {},
  },
  "latest_log_counter": 6,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [],
    "matsById": Immutable.Map {
      62822: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniq7",
        "last_event": 2018-02-02T09:52:05.000Z,
        "materialID": 62822,
        "partName": "part111",
        "signaledInspections": Array [],
      },
      57245: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqr",
        "last_event": 2018-02-08T09:34:05.000Z,
        "materialID": 57245,
        "partName": "part111",
        "signaledInspections": Array [],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "progr",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-08T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-08T09:24:05.000Z,
        "hours": 0.2,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-08T09:34:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:40:05.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:46:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:52:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
  },
  "inspection": Object {
    "by_part": Immutable.Map {},
  },
  "latest_log_counter": 6,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [],
    "matsById": Immutable.Map {
      90816: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          2,
        ],
        "jobUnique": "uniq9",
        "last_event": 2018-01-06T09:40:05.000Z,
        "materialID": 90816,
        "partName": "part222",
        "signaledInspections": Array [],
      },
      56627: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqp",
        "last_event": 2018-01-31T09:46:05.000Z,
        "materialID": 56627,
        "partName": "part222",
        "signaledInspections": Array [],
      },
      62822: Object {
        "completedInspections": Object {},
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniq7",
        "last_event": 2018-02-02T09:52:05.000Z,
        "materialID": 62822,
        "partName": "part111",
        "signaledInspections": Array [],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-01-31T09:43:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face8",
          "id": 56627,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqp",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-01-31T09:46:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face8",
          "id": 56627,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqp",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-01-31T09:46:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "progw",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "-00:01:00",
      "counter": 6,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-01-31T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-01-31T09:36:05.000Z,
        "hours": 0.4,
        "station": "MC #1",
      },
      Object {
        "date": 2018-01-31T09:46:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;
